[package]
name = "waveform"
version = "0.1.0"
authors = ["Jef <jackefransham@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gl = "0.14"
glutin = "0.25"
rustfft = "4.0"
rand = "0.7"
rodio = "0.12"
clap = "2.33"
skia-safe = { git = "https://github.com/rust-skia/rust-skia.git", features = ["gl"] }
