[package]
name = "waveform"
version = "0.1.0"
authors = ["Jef <jackefransham@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gl = "0.14"
glutin = { version = "0.25", features = ["wayland"], default_features = false }
rustfft = "4.0"
rand = "0.7"
rodio = "0.12"
clap = "2.33"
skia-safe = { git = "https://github.com/Vurich/rust-skia.git", features = ["gl", "wayland"] }

[profile.release]
lto = "thin"
